prevent pdf icon image stretch

--- a/app/assets/stylesheets/c4d_article_show.css
+++ b/app/assets/stylesheets/c4d_article_show.css
@@ -219,7 +219,6 @@
   height:100%;
 }
 .tools_reference_link_pdf_icon {
-  height:150px !important;
   margin-right:10px;
   margin-bottom:10px;
 }
